@@ -1,6 +1,7 @@
 2017-01-24  Markus Gans  <guru.mail@muenster.de>
 	* Fixes compiler errors for latest Cygwin versions
 	* Widget color scheme settings moved to a separate class
+	* The color palette redefinition now has its own class
 
 2017-01-21  Markus Gans  <guru.mail@muenster.de>
 	* The Final Cut can now also be compiled under Cygwin
